--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.12.2
   flutter_secure_storage: ^3.3.5
   provider: ^4.3.2+2
+  mapbox_gl: ^0.9.0
+  geolocator: ^6.1.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
