--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/witsudi/Android/Sdk
-flutter.sdk=/home/witsudi/snap/flutter/common/flutter
-flutter.buildMode=release
+sdk.dir=C:\\Users\\Asus\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
